# abiturientkz

./: .gitignore  Dockerfile  Makefile  docker-compose-dbs.yml  docker-compose.yml  pyproject.toml
abiturient/: __init__.py  __main__.py  alembic.ini
abiturient/apps/about/: Dockerfile  __main__.py  router.py  views.py
abiturient/apps/auth/: Dockerfile  __main__.py  exceptions.py  router.py  schemas.py  use_cases.py  views.py
abiturient/apps/ent/: Dockerfile  __main__.py  router.py  schemas.py  tasks.py  use_cases.py  views.py
abiturient/apps/ent/utils/: pdf_extractor.py
abiturient/apps/profile/: Dockerfile  __main__.py  router.py  schemas.py  use_cases.py  views.py
abiturient/core/: db.py  pagination.py  security.py  settings.py  taskiq.py
abiturient/infra/db/: database.py
abiturient/infra/db/models/: __init__.py  base.py  pdf.py  profile.py  review.py  state.py  user.py
abiturient/infra/migrations/: env.py
abiturient/infra/migrations/versions/: 12c1dccd4b72_add_rural_quota_to_concursenum.py  26242d67d1b7_made_year_statistics_university_.py  4eb3f0422f21_updated_fields_in_university_and_.py  511c7598a989_created_profile_review_state_models.py  9f3f9a9fc9f0_created_user_model.py  b7af1f2e271c_added_relationship_to_year_statistic.py
abiturient/infra/repositories/postgresql/: common.py  pdf.py  profile.py  (+2 more)
abiturient/utils/: app_start.py  auth.py  config_reader.py  date.py  logger.py  patterns.py  redis_utils.py  use_case.py
nginx/: cors_headers.conf  nginx.conf  proxy_headers.conf  websocket_settings.conf
scripts/: abiturient_cluster_run.sh
